fixed spacing

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -549,13 +549,18 @@ h2{
 
 
 .middle-top{
-	margin: 40% auto;
+	margin: 30% auto;
 	overflow: hidden;
 	position: relative;
 
 	@media screen and (min-width: 768px){
 		width: 82.470817%;
-    	margin: 20% auto;
+		margin-top: 20%;
+		margin-bottom: 20%;
+	}
+	@media screen and (min-width: 1024px){
+		margin-bottom: 14%;
+		margin-top: 14%;
 	}
 
 	.headline{
@@ -650,11 +655,22 @@ h2{
 .middle-middle{
 	position: relative;
 	overflow: hidden;
-	margin: 40% auto;
+	margin: 30% auto;
 
 	@media screen and (min-width: 768px){
 		width: 75.470817%;
 		margin: 20% auto;
+	}
+	@media screen and (min-width: 1024px){
+		margin-top: 13%;
+	}
+	@media screen and (min-width: 1224px){
+		margin-top: -3%;
+		margin-bottom: -4%;
+	}
+	@media screen and (min-width: 1440px){
+		margin-top: -4%;
+		margin-bottom: -6%;
 	}
 
 	.right-side-car{
@@ -670,7 +686,7 @@ h2{
 			background-image: url('../img/blueCar.png');
 			background-repeat: no-repeat;
 			height: 0;
-			padding-bottom: 53%;
+			padding-bottom: 50%;
 			background-size: 100% auto;
 		}
 
@@ -744,12 +760,15 @@ h2{
 .middle-bottom{
 	position: relative;
 	overflow: hidden;
-	margin: 40% auto;
+	margin: 30% auto;
 
 	@media screen and (min-width: 768px){
 		width: 83.40625%;
-		margin-top: 25%;
+		margin-top: 20%;
 		margin-bottom: 20%;
+	}
+	@media screen and (min-width: 1224px){
+		margin-bottom: 15%;
 	}
 	
 
@@ -836,12 +855,13 @@ h2{
 //OUR MODELS
 .modelsTitle{
 	@media screen and (max-width: 714px){
-		margin-bottom: 23%;
+		margin-bottom: 17%;
 	}
 	display: flex;
 	justify-content: center;
 	text-align: center;
 	margin-bottom: 5%;
+	
 
 	h1{
 		text-align: center;
@@ -1023,17 +1043,24 @@ h2{
 
 
 .gallery{
-	margin-bottom: 50%;
+	margin-bottom: 35%;
 	@media screen and (min-width: 768px){
 		margin: 20% auto;
 	}
+	@media screen and (min-width: 1224px){
+		margin: 10% auto;
+	}
 
 	.galleryTitle{
-		margin: 50% 0 20% 0;
+		margin: 40% 0 10% 0;
 		text-align: center;
 		@media screen and (min-width: 768px){
 			margin: 25% 0 0 0;
 		}
+		@media screen and (min-width:1224px){
+			margin: 15% 0 0 0;
+		}
+		
 
 		h1{
 			text-align: center;
@@ -1168,6 +1195,9 @@ h2{
 	margin-bottom: 30%;
 	@media screen and (min-width: 768px){
 		margin-bottom: 20%;
+	}
+	@media screen and (min-width: 1224px){
+		margin-top: 16%;
 	}
 
 	.community{
